--- a/erykandroidcommon/src/main/res/layout/item_grouping_header.xml
+++ b/erykandroidcommon/src/main/res/layout/item_grouping_header.xml
@@ -6,7 +6,7 @@
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/tv_header"
-              style="@style/AppTheme.GroupingHeader"
+              style="@style/CommonTheme.GroupingHeader"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>
 
