--- a/erykandroidcommon/src/main/res/layout/fragment_rating_count_bar.xml
+++ b/erykandroidcommon/src/main/res/layout/fragment_rating_count_bar.xml
@@ -11,7 +11,7 @@
         android:numStars="5"/>
 
     <TextView
-        android:id="@+id/rating_count"
+        android:id="@+id/ratingCount"
         style="@style/AppTheme.RatingTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
