--- a/src/main/res/layout/item_grouping_header.xml
+++ b/src/main/res/layout/item_grouping_header.xml
@@ -5,7 +5,7 @@
              android:orientation="vertical">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/tv_header"
+              android:id="@+id/tvHeader"
               style="@style/Common.GroupingHeader"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>
