--- a/src/main/res/values/integers.xml
+++ b/src/main/res/values/integers.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="default_max_length">255</integer>
+    <integer name="default_text_length">255</integer>
+    <integer name="title_text_length">55</integer>
+    <integer name="long_text_length">63206</integer>
 </resources>
